--- a/client.css
+++ b/client.css
@@ -13,12 +13,12 @@
   flex: 1;
   height: 400px;
   width: 340px;
-  /* border: 2px solid #000; */
+  border: 2px solid #ccc;
 }
 
 div, input, button, label {
   font-family: 'Poppins', sans-serif;
-  font-size: 9px;
+  font-size: 14px;
 }
 
 .title {
@@ -37,30 +37,51 @@ div, input, button, label {
   margin: 0;
 }
 
-#signup-fieldset {
-  margin-top: 2px;
+#signin-fieldset, #signup-fieldset {
+  padding: 10px;
 }
 
+#signup-fieldset {
+  margin-top: 9px;
+}
 
-/* Control the width of input fields */
-input[type="text"],
-input[type="email"],
-input[type="password"],
-select {
-    width: 100%; /* Make input fields take full width of the form */
-    max-width: 460px; /* Restrict the maximum width */
+/* Control the width of input fields in profile view*/
+input {
+    margin: 0 0 15px 0;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 5px 0;
+    padding-left: 5px;
+    border-radius: 5px;
+}
+
+label {
+  display: block;
+  margin: 4px 0;
+}
+
+/* Control the width of input fields in welcome view*/
+#forms input[type="text"],
+#forms input[type="email"],
+#forms input[type="password"],
+#forms select {
     padding: 1px; /* Add padding for better usability */
     padding-left: 5px;
-    font-size: 9px; /* Set font size */
+    font-size: 11px; /* Set font size */
     border: 1px solid #ccc;
     border-radius: 3px;
     box-sizing: border-box; /* Include padding in width calculation */
-    margin: 0;
+    margin: 4px 0;
+    display: inline-block;
+    width: 65%;
 }
   
-label {
-    display: block;
-    margin: 1px 0 0 0;
+#forms label {
+    display: inline-block;
+    margin: 1px 0;
+    font-size: 11px;
+    text-align: left;
+    width: 35%;
 }
 
 #forms input[type="submit"] {
@@ -85,7 +106,7 @@ label {
   border: none;
   background-color: #ff875e;
   cursor: pointer;
-  font-size: 1px;
+  font-size: 14px;
   transition: background-color 0.3s ease;
 }
 
@@ -141,13 +162,13 @@ label {
   font-size: 16px;
 }
 
-.field {
+.about .field {
   text-align: left;
   width: 25%;
   color: #949494;
 }
 
-.value {
+.about .value {
   text-align: right;
   width: 75%;
 }
@@ -224,21 +245,3 @@ label {
   color: red;
   margin-top: 5px;
 }
-
-#change-password-form input {
-  margin: -5px 0 5px 0;
-}
-
-#change-password-form #change-password-submit {
-  margin: 20px 0 0 0;
-}
-
-/* textarea {
-  width: 100%;
-  height: 80px;
-  margin: 10px 0;
-  padding: 10px;
-  font-size: 14px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-} */
